Fixing Text-align: center in FOOTER and Responsive in the posters

--- a/anmeldung/static/css/footer.css
+++ b/anmeldung/static/css/footer.css
@@ -5,4 +5,10 @@
 }
 
 .footer .p {
-margin-bottom: 0px
+margin-bottom: 0px}
+
+@media only screen and (max-width: 768px) {
+.mb-0 {
+text-align: center;
+}
+]
